@@ -52,36 +52,55 @@ jobs:
       matrix:
         python-version: [3.6, 3.7, 3.8]
 
+    env:
+      CC: /usr/bin/clang
+      CXX: /usr/bin/clang++
+      CXXFLAGS: "-Xpreprocessor -fopenmp -I/usr/local/opt/libomp/include"
+      CFLAGS: "-Xpreprocessor -fopenmp -I/usr/local/opt/libomp/include"
+      LDFLAGS: "-L/usr/local/opt/libomp/lib -lomp"
+      DYLD_LIBRARY_PATH: /usr/local/opt/libomp/lib
+
     steps:
     - uses: actions/checkout@v1
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
     - run: mkdir -p dist
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install numpy scipy h5py cython pandas xlrd flake8 pytest ipywidgets IPython matplotlib traitlets pyqt5
-        pip install uncertainties ptemcee corner tqdm pytest-qt periodictable wheel
-        pip install git+https://github.com/pymc-devs/pymc3
-        pip install .
+
     - name: Lint with flake8
       run: |
         pip install flake8
         # stop the build if there are Python syntax errors or undefined names
         flake8 --ignore=F401,W504 --count --show-source --statistics --exclude=refnx/_lib/emcee,refnx/reflect/_app/resources_rc.py refnx
-    - name: Test with pytest
-      env:
-        MPLBACKEND: agg
+
+    - name: Install openmp
       run: |
-        pip install pytest
-        pytest
-    - name: make wheel
+        brew update
+        brew install libomp
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install numpy scipy h5py cython pandas xlrd pytest ipywidgets IPython matplotlib traitlets pyqt5
+        pip install uncertainties ptemcee corner tqdm pytest-qt periodictable wheel delocate
+        pip install git+https://github.com/pymc-devs/pymc3
+
+    - name: Make wheel
       env:
         MACOSX_DEPLOYMENT_TARGET: 10.9
       run: |
         python setup.py bdist_wheel
+        # so that libomp is distributed with wheel
+        delocate-wheel -v dist/*.whl
+
+    - name: Install package and test with pytest
+      env:
+        MPLBACKEND: agg
+      run: |
+        pip install --only-binary=refnx --no-index --find-links=dist/ refnx
+        pytest
 
     - uses: actions/upload-artifact@v1
       with:
