@@ -228,3 +228,4 @@ Details of changes made to refnx
   This improvement does not apply to Windows because it doesn't have a
   C99 standard conformant compiler.
 - Document how to save a model.
+- macOS wheels (and CI testing) have the cyreflect openmp option activated.
